# rust-jpegli

./: Cargo.toml  README.md  TECH_SPEC.md  THIRD_PARTY_NOTICES.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/jpegli/: Cargo.toml
crates/jpegli-sys/: Cargo.toml  PACKAGE-LICENSES.md  THIRD_PARTY_NOTICES.md  build.rs
crates/jpegli-sys/src/: bindings.rs  lib.rs
crates/jpegli-sys/src/shim/: jpegli_rs_shim.cc  jpegli_rs_shim.h
crates/jpegli/examples/: memory_encode.rs
crates/jpegli/src/: lib.rs
crates/jpegli/tests/: encode.rs
crates/jpegli/tests/fixtures/: gray_gradient.pgm  rgb_gradient.ppm
