[workspace]
members = ["crates/jpegli-sys", "crates/jpegli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
rust-version = "1.75"

[workspace.dependencies]
cc = "1.2"
cmake = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "pnm"] }
